// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ResultsConcepts correctly with hits 1`] = `
<main
  id="content"
>
  <section
    className="row mb-3"
  >
    <div
      className="col-6 col-lg-4"
    />
    <div
      className="col-6 col-lg-4 offset-lg-4"
    >
      <div
        className="d-flex justify-content-end"
      >
        <Button
          className="fdk-button fdk-button-black-toggle selected"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Relevance
        </Button>
        <Button
          className="fdk-button fdk-button-black-toggle"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Recently published
        </Button>
      </div>
    </div>
  </section>
  <section
    className="row"
  >
    <aside
      className="search-filters col-lg-4"
    >
      <div
        className="d-none d-lg-block"
      >
        <span
          aria-hidden="false"
          className="uu-invisible"
        >
          Filtrering tilgang
        </span>
        <FilterPills
          history={
            Object {
              "push": [Function],
            }
          }
          location={
            Object {
              "search": "",
            }
          }
          locationSearch={Object {}}
          losItems={null}
          publishers={null}
          themesItems={null}
        />
      </div>
    </aside>
    <section
      className="col-lg-8"
    >
      <ConceptsHitItem
        concepts={Object {}}
        fadeInCounter={0}
        key="d092ccf9-93dd-4ef9-9a5a-d1a50f495d82"
        onAddConcept={[Function]}
        onDeleteConcept={[Function]}
        result={
          Object {
            "altLabel": Array [
              Object {
                "nb": "familiebarnehage",
              },
            ],
            "contactPoint": Object {
              "email": "begrepskatalogen@skatteetaten.no",
            },
            "definition": Object {
              "text": Object {
                "nb": "institusjon for barn som er under skolepliktig alder",
              },
            },
            "harvest": Object {
              "firstHarvested": "2019-04-29T12:18:21.525+0000",
              "lastHarvested": "2019-07-02T04:00:53.441+0000",
            },
            "hiddenLabel": Array [],
            "id": "d092ccf9-93dd-4ef9-9a5a-d1a50f495d82",
            "identifier": "http://begrepskatalogen/begrep/20b52ae3-9fe1-11e5-a9f8-e4115b280940",
            "prefLabel": Object {
              "nb": "barnehage",
            },
            "publisher": Object {
              "name": "SKATTEETATEN",
              "orgPath": "/STAT/972417807/974761076",
              "prefLabel": Object {
                "no": "SKATTEETATEN",
              },
              "uri": "http://data.brreg.no/enhetsregisteret/enhet/974761076",
            },
            "subject": Object {
              "nb": "Tredjepartsopplysninger",
            },
            "uri": "https://fellesdatakatalog.brreg.no/api/concepts/d092ccf9-93dd-4ef9-9a5a-d1a50f495d82",
          }
        }
      />
      <ConceptsHitItem
        concepts={Object {}}
        fadeInCounter={0}
        key="22ce6a6e-f629-4a75-826d-500cfc2d9e7a"
        onAddConcept={[Function]}
        onDeleteConcept={[Function]}
        result={
          Object {
            "altLabel": Array [],
            "contactPoint": Object {
              "email": "begrepskatalogen@skatteetaten.no",
            },
            "definition": Object {
              "remark": Object {
                "nb": "Tilskudd utover en månedlig maksimalbeløp skal arbeidstakeren som har barnehageplassen skatte av.",
              },
              "source": Object {
                "prefLabel": Object {
                  "nb": "Veiledningen til A-ordningen, - FSFIN §5-15-5, 2. ledd",
                },
              },
              "text": Object {
                "nb": "økonomisk tilskudd fra arbeidsgiveren til en barnehage som ikke er arbeidsgiverens bedriftsbarnehage.",
              },
            },
            "harvest": Object {
              "firstHarvested": "2019-04-29T12:17:02.338+0000",
              "lastHarvested": "2019-07-02T04:00:16.185+0000",
            },
            "hiddenLabel": Array [],
            "id": "22ce6a6e-f629-4a75-826d-500cfc2d9e7a",
            "identifier": "http://begrepskatalogen/begrep/8ea2df64-7662-11e6-a74e-7e18b36b3fd9",
            "prefLabel": Object {
              "nb": "tilskudd til barnehageplass",
            },
            "publisher": Object {
              "name": "SKATTEETATEN",
              "orgPath": "/STAT/972417807/974761076",
              "prefLabel": Object {
                "no": "SKATTEETATEN",
              },
              "uri": "http://data.brreg.no/enhetsregisteret/enhet/974761076",
            },
            "subject": Object {
              "nb": "Formues- og inntektsskatt",
            },
            "uri": "https://fellesdatakatalog.brreg.no/api/concepts/22ce6a6e-f629-4a75-826d-500cfc2d9e7a",
          }
        }
      />
      <ConceptsHitItem
        concepts={Object {}}
        fadeInCounter={0}
        key="815db2ae-b168-4d1e-9934-9a374a09a605"
        onAddConcept={[Function]}
        onDeleteConcept={[Function]}
        result={
          Object {
            "altLabel": Array [],
            "contactPoint": Object {
              "email": "begrepskatalogen@skatteetaten.no",
            },
            "definition": Object {
              "source": Object {
                "prefLabel": Object {
                  "nb": "FSFIN § 5-15-5",
                },
              },
              "text": Object {
                "nb": "skattfri fordel av plass i barnehage som arbeidsgiver gjennom eierandel eller innskudd disponerer til bruk for sine arbeidstakeres barn",
              },
            },
            "harvest": Object {
              "firstHarvested": "2019-04-29T12:16:53.227+0000",
              "lastHarvested": "2019-07-02T04:00:12.564+0000",
            },
            "hiddenLabel": Array [],
            "id": "815db2ae-b168-4d1e-9934-9a374a09a605",
            "identifier": "http://begrepskatalogen/begrep/8ea2df2d-7662-11e6-a74e-7e18b36b3fd9",
            "prefLabel": Object {
              "nb": "fordel av bedriftsbarnehageplass",
            },
            "publisher": Object {
              "name": "SKATTEETATEN",
              "orgPath": "/STAT/972417807/974761076",
              "prefLabel": Object {
                "no": "SKATTEETATEN",
              },
              "uri": "http://data.brreg.no/enhetsregisteret/enhet/974761076",
            },
            "subject": Object {
              "nb": "Formues- og inntektsskatt",
            },
            "uri": "https://fellesdatakatalog.brreg.no/api/concepts/815db2ae-b168-4d1e-9934-9a374a09a605",
          }
        }
      />
      <ConceptsHitItem
        concepts={Object {}}
        fadeInCounter={0}
        key="8f1a3814-0cde-470e-aa3e-fc30bf1835a4"
        onAddConcept={[Function]}
        onDeleteConcept={[Function]}
        result={
          Object {
            "altLabel": Array [],
            "contactPoint": Object {
              "email": "begrepskatalogen@skatteetaten.no",
            },
            "definition": Object {
              "text": Object {
                "nb": "faktisk kostnad som en gitt skattepliktig har i en gitt skattleggingsperionde for merkjøring for å bringe og hente barn ",
              },
            },
            "example": Object {
              "nb": "Bussbillett mellom hjem og barnehage mv., bompenger for omveien til og fra barnehagen",
            },
            "harvest": Object {
              "firstHarvested": "2019-04-29T12:17:16.835+0000",
              "lastHarvested": "2019-07-02T04:00:22.580+0000",
            },
            "hiddenLabel": Array [],
            "id": "8f1a3814-0cde-470e-aa3e-fc30bf1835a4",
            "identifier": "http://begrepskatalogen/begrep/46f4d715-4c6c-11e8-bb3e-005056821322",
            "prefLabel": Object {
              "nb": "faktisk kostnad for merkjøring for å bringe og hente barn",
            },
            "publisher": Object {
              "name": "SKATTEETATEN",
              "orgPath": "/STAT/972417807/974761076",
              "prefLabel": Object {
                "no": "SKATTEETATEN",
              },
              "uri": "http://data.brreg.no/enhetsregisteret/enhet/974761076",
            },
            "subject": Object {
              "nb": "Formues- og inntektsskatt",
            },
            "uri": "https://fellesdatakatalog.brreg.no/api/concepts/8f1a3814-0cde-470e-aa3e-fc30bf1835a4",
          }
        }
      />
      <ConceptsHitItem
        concepts={Object {}}
        fadeInCounter={0}
        key="30b843a4-0d19-41f7-aee3-7e79ec703d03"
        onAddConcept={[Function]}
        onDeleteConcept={[Function]}
        result={
          Object {
            "altLabel": Array [
              Object {
                "nb": "betalt barnepass",
              },
            ],
            "contactPoint": Object {
              "email": "begrepskatalogen@skatteetaten.no",
            },
            "definition": Object {
              "remark": Object {
                "nb": "Dette omfatter ikke kostnader til mat, drikke og merkjøring for å bringe og hente barn",
              },
              "source": Object {
                "prefLabel": Object {
                  "nb": "Skatte-ABC, fagemnet Foreldrefradrag",
                },
              },
              "text": Object {
                "nb": "summen for en bestemt skattleggingsperiode av en gitt skattepliktigs utgifter til tilsyn i barnets hjem, i barnepassers hjem, barnehage, i skolefritidsordning på barneskole, institusjon mv., for barn som gir rett til foreldrefradrag.",
              },
            },
            "harvest": Object {
              "firstHarvested": "2019-04-29T12:17:50.112+0000",
              "lastHarvested": "2019-07-02T04:00:37.283+0000",
            },
            "hiddenLabel": Array [],
            "id": "30b843a4-0d19-41f7-aee3-7e79ec703d03",
            "identifier": "http://begrepskatalogen/begrep/20b52ae7-9fe1-11e5-a9f8-e4115b280940",
            "prefLabel": Object {
              "nb": "oppholdskostnader ved pass og stell av barn",
            },
            "publisher": Object {
              "name": "SKATTEETATEN",
              "orgPath": "/STAT/972417807/974761076",
              "prefLabel": Object {
                "no": "SKATTEETATEN",
              },
              "uri": "http://data.brreg.no/enhetsregisteret/enhet/974761076",
            },
            "subject": Object {
              "nb": "Tredjepartsopplysninger",
            },
            "uri": "https://fellesdatakatalog.brreg.no/api/concepts/30b843a4-0d19-41f7-aee3-7e79ec703d03",
          }
        }
      />
      <ConceptsHitItem
        concepts={Object {}}
        fadeInCounter={0}
        key="d071c81d-0ae3-411a-8b47-bbdd99b87233"
        onAddConcept={[Function]}
        onDeleteConcept={[Function]}
        result={
          Object {
            "altLabel": Array [],
            "contactPoint": Object {
              "email": "begrepskatalogen@skatteetaten.no",
            },
            "definition": Object {
              "remark": Object {
                "nb": "Pass og stell av barn vil omfatte tilsyn, pleie mv. av barnet. Dette kan skje i barnets hjem, i barnepassers hjem, barnehage, i skolefritidsordning på barneskole, institusjon mv. Som pass og stell av barn regnes også fritidsordninger for barn i regi av klubber og foreninger som driver aktiviteter innenfor eget interessefelt med mindre aktivitieten er sporadisk. Dette kan f.eks. være aktiviteter innenfor idrett, teater, musikk, barnekor, kulturskole mv. Det er et vilkår at ordningen er etablert som et alternativ til skolefritidsordning på barneskole. Trening med aldersbestemt lag regnes ikke som pass og stell av barn. Pass og stell må avgrenses mot",
              },
              "source": Object {
                "prefLabel": Object {
                  "nb": "Skatte-ABC, fagemnet \\"Foreldrefradrag\\"",
                },
              },
              "text": Object {
                "nb": "ivaretakelse av barnets velbefinnede ved at en eller flere ansvarlige personer er til stede og viser omsorg for barnet",
              },
            },
            "harvest": Object {
              "firstHarvested": "2019-04-29T12:16:53.845+0000",
              "lastHarvested": "2019-07-02T04:00:12.965+0000",
            },
            "hiddenLabel": Array [],
            "id": "d071c81d-0ae3-411a-8b47-bbdd99b87233",
            "identifier": "http://begrepskatalogen/begrep/46f4d75b-4c6c-11e8-bb3e-005056821322",
            "prefLabel": Object {
              "nb": "pass og stell av barn",
            },
            "publisher": Object {
              "name": "SKATTEETATEN",
              "orgPath": "/STAT/972417807/974761076",
              "prefLabel": Object {
                "no": "SKATTEETATEN",
              },
              "uri": "http://data.brreg.no/enhetsregisteret/enhet/974761076",
            },
            "subject": Object {
              "nb": "Formues- og inntektsskatt",
            },
            "uri": "https://fellesdatakatalog.brreg.no/api/concepts/d071c81d-0ae3-411a-8b47-bbdd99b87233",
          }
        }
      />
      <ConceptsHitItem
        concepts={Object {}}
        fadeInCounter={0}
        key="5bb11bb8-806b-4c93-84f9-05da23679d1b"
        onAddConcept={[Function]}
        onDeleteConcept={[Function]}
        result={
          Object {
            "altLabel": Array [],
            "contactPoint": Object {
              "email": "begrepskatalogen@skatteetaten.no",
            },
            "definition": Object {
              "remark": Object {
                "nb": "En dagmamma skal godkjennes av kommunen i henhold til \\"Forskrift om miljørettet helsevern i barnehager og skoler m.v\\" dersom: 1) Man får godtgjøring for regelmessig tilsyn med og omsorg for barn, 2) tilbyr ukentlig oppholdstid på mer enn ti timer og 3) antall barn som er tilstede samtidig, er tre eller flere (inkludert dagmammaens egne barn).

Enten er foreldrene arbeidsgivere, eller dagmammaen er selvstendig næringsdrivende. Det er mange forenklede regler for dagmammajobb i forhold til andre arbeidsforhold. Bant annet skal det ikke betales arbeidsgiveravgift og dagmammaen trenger ikke nødvedigvis registrere seg som selvstedig næringsdrivende i Brønnøysundregistrene.",
              },
              "source": Object {
                "prefLabel": Object {
                  "nb": "snl.no",
                },
              },
              "text": Object {
                "nb": "person som passer andres barn regelmessig på dagtid, gjerne hele dager, og ofte mens foreldrene er på jobb. Passer som regel flere barn samtidig, enten hjemme hos seg selv eller hjemme hos ett av barna.",
              },
            },
            "harvest": Object {
              "firstHarvested": "2019-04-29T12:17:40.238+0000",
              "lastHarvested": "2019-07-02T04:00:32.617+0000",
            },
            "hiddenLabel": Array [],
            "id": "5bb11bb8-806b-4c93-84f9-05da23679d1b",
            "identifier": "http://begrepskatalogen/begrep/dcfb471c-e484-11e6-9cb3-005056821322",
            "prefLabel": Object {
              "nb": "dagmamma i egen bolig",
            },
            "publisher": Object {
              "name": "SKATTEETATEN",
              "orgPath": "/STAT/972417807/974761076",
              "prefLabel": Object {
                "no": "SKATTEETATEN",
              },
              "uri": "http://data.brreg.no/enhetsregisteret/enhet/974761076",
            },
            "subject": Object {
              "nb": "A-ordningen",
            },
            "uri": "https://fellesdatakatalog.brreg.no/api/concepts/5bb11bb8-806b-4c93-84f9-05da23679d1b",
          }
        }
      />
      <ConceptsHitItem
        concepts={Object {}}
        fadeInCounter={0}
        key="572c21d8-dd74-41a0-8bc1-cc9ddcf2c430"
        onAddConcept={[Function]}
        onDeleteConcept={[Function]}
        result={
          Object {
            "altLabel": Array [],
            "contactPoint": Object {
              "email": "begrepskatalogen@skatteetaten.no",
            },
            "definition": Object {
              "text": Object {
                "nb": "rent leketilbud uten de samme krav til pedagogiske personale som for barnehager",
              },
            },
            "harvest": Object {
              "firstHarvested": "2019-04-29T12:17:46.570+0000",
              "lastHarvested": "2019-07-02T04:00:35.700+0000",
            },
            "hiddenLabel": Array [],
            "id": "572c21d8-dd74-41a0-8bc1-cc9ddcf2c430",
            "identifier": "http://begrepskatalogen/begrep/20b52ae4-9fe1-11e5-a9f8-e4115b280940",
            "prefLabel": Object {
              "nb": "barnepark",
            },
            "publisher": Object {
              "name": "SKATTEETATEN",
              "orgPath": "/STAT/972417807/974761076",
              "prefLabel": Object {
                "no": "SKATTEETATEN",
              },
              "uri": "http://data.brreg.no/enhetsregisteret/enhet/974761076",
            },
            "subject": Object {
              "nb": "Tredjepartsopplysninger",
            },
            "uri": "https://fellesdatakatalog.brreg.no/api/concepts/572c21d8-dd74-41a0-8bc1-cc9ddcf2c430",
          }
        }
      />
    </section>
    <section
      className="col-lg-8 offset-lg-4 d-flex justify-content-center"
    >
      <span
        aria-hidden="false"
        className="uu-invisible"
      >
        Sidepaginering.
      </span>
      <PaginationBoxView
        activeClassName="active"
        breakClassName="break-me"
        breakLabel={
          <span>
            ...
          </span>
        }
        containerClassName="pagination"
        disableInitialCallback={true}
        disabledClassName="disabled"
        forcePage={0}
        marginPagesDisplayed={1}
        nextClassName="next"
        nextLabel="Neste side"
        onPageChange={[Function]}
        pageCount={1}
        pageRangeDisplayed={2}
        previousClassName="previous"
        previousLabel="Forrige side"
        subContainerClassName="pages pagination"
      />
    </section>
  </section>
</main>
`;

exports[`should render ResultsConcepts correctly with minimum of props 1`] = `
<main
  id="content"
>
  <section
    className="row mb-3"
  >
    <div
      className="col-6 col-lg-4"
    />
    <div
      className="col-6 col-lg-4 offset-lg-4"
    >
      <div
        className="d-flex justify-content-end"
      >
        <Button
          className="fdk-button fdk-button-black-toggle selected"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Relevance
        </Button>
        <Button
          className="fdk-button fdk-button-black-toggle"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Recently published
        </Button>
      </div>
    </div>
  </section>
  <section
    className="row"
  >
    <aside
      className="search-filters col-lg-4"
    >
      <div
        className="d-none d-lg-block"
      >
        <span
          aria-hidden="false"
          className="uu-invisible"
        >
          Filtrering tilgang
        </span>
        <FilterPills
          history={
            Object {
              "push": [Function],
            }
          }
          location={
            Object {
              "search": "",
            }
          }
          locationSearch={Object {}}
          losItems={null}
          publishers={null}
          themesItems={null}
        />
      </div>
    </aside>
    <section
      className="col-lg-8"
    />
    <section
      className="col-lg-8 offset-lg-4 d-flex justify-content-center"
    >
      <span
        aria-hidden="false"
        className="uu-invisible"
      >
        Sidepaginering.
      </span>
      <PaginationBoxView
        activeClassName="active"
        breakClassName="break-me"
        breakLabel={
          <span>
            ...
          </span>
        }
        containerClassName="pagination"
        disableInitialCallback={true}
        disabledClassName="disabled"
        forcePage={0}
        marginPagesDisplayed={1}
        nextClassName="next"
        nextLabel="Neste side"
        onPageChange={[Function]}
        pageCount={1}
        pageRangeDisplayed={2}
        previousClassName="previous"
        previousLabel="Forrige side"
        subContainerClassName="pages pagination"
      />
    </section>
  </section>
</main>
`;
